[gd_scene load_steps=5 format=3 uid="uid://b2j6sdi3wn0pp"]

[ext_resource type="FontFile" uid="uid://bi04iecmbt37l" path="res://inventory/Fonts/ARCADECLASSIC.TTF" id="1_5pqrk"]
[ext_resource type="Script" uid="uid://cg215iyb63uin" path="res://inventory/Scripts/inventory_test.gd" id="1_fpraf"]
[ext_resource type="PackedScene" uid="uid://bxbnos3drxhfp" path="res://inventory/Scenes/Inventory_UI.tscn" id="2_w8vtx"]

[sub_resource type="LabelSettings" id="LabelSettings_8lqtr"]
font_size = 60

[node name="inventory_test" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_fpraf")

[node name="InventoryUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="InventoryUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.192157, 0.376471, 0.321569, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="InventoryUI/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.5
offset_top = 50.0
offset_right = 37.5
offset_bottom = 76.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_5pqrk")
theme_override_font_sizes/font_size = 60
text = "Inventory"
metadata/_edit_use_anchors_ = true

[node name="InventoryUI" parent="InventoryUI/ColorRect" instance=ExtResource("2_w8vtx")]

[node name="apples" type="Button" parent="."]
layout_mode = 0
offset_right = 212.0
offset_bottom = 171.0
text = "buy apples
"

[node name="sticks" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 464.0
offset_right = 234.0
offset_bottom = 640.0
text = "buy sticks
"

[node name="engine" type="Button" parent="."]
layout_mode = 0
offset_left = 255.0
offset_top = 514.0
offset_right = 424.0
offset_bottom = 640.0
text = "ENGINE"

[node name="wheels" type="Button" parent="."]
layout_mode = 0
offset_left = 446.0
offset_top = 518.0
offset_right = 610.0
offset_bottom = 644.0
text = "WHEELS
"

[node name="suspension" type="Button" parent="."]
layout_mode = 0
offset_left = 642.0
offset_top = 514.0
offset_right = 804.0
offset_bottom = 641.0
text = "SUSPENSION"

[node name="upgrade_text" type="Label" parent="."]
layout_mode = 0
offset_left = 412.0
offset_right = 819.0
offset_bottom = 285.0
label_settings = SubResource("LabelSettings_8lqtr")
horizontal_alignment = 1

[connection signal="pressed" from="apples" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="sticks" to="." method="_on_sticks_pressed"]
[connection signal="pressed" from="engine" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="wheels" to="." method="_on_wheels_pressed"]
[connection signal="pressed" from="suspension" to="." method="_on_suspension_pressed"]
